k8s/network-policies/allow-flask-to-redis.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-flask-to-redis
  namespace: default
spec:
  podSelector: 
    matchLabels:
      app: hello-k8s
  # controlling outgoing traffic from hello-k8s pods
  policyTypes:
  - Egress
  # flask can only send traffic to redis pods and kube-dns in kube-system namespace
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: redis
    ports:
    - protocol: TCP
      port: 6379
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    # port 53 is used for DNS queries to kube-dns, which is required for flask to resolve the hostname of redis service (redis.default.svc.cluster.local) to its IP address. If we don't allow traffic to kube-dns, flask won't be able to find redis and won't be able to connect to it.
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
