k8s/network-policies/allow-redis-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-redis-ingress
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
  - Ingress
  - Egress
  # redis only accepts connections and traffics from hello-k8s pods.
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: hello-k8s
    ports:
    - protocol: TCP
      port: 6379
  # redis egress only allows DNS - redis cannot reach internet at all.
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - protocol: UDP
      port: 53
